# EvAgent

./: .gitignore  evagent-web.bat  evagent.bat
.github/workflows/: ci.yml
domains/coding/agents/: architect.yaml  build-error-resolver.yaml  code-reviewer.yaml  e2e-runner.yaml  planner.yaml
domains/coding/skills/api-design/: SKILL.md
domains/communication/agents/: email-composer.yaml  messenger-bot.yaml  social-media-manager.yaml
domains/media/agents/: audio-engineer.yaml  motion-designer.yaml  video-editor.yaml
domains/quant-trading/agents/: market-analyst.yaml  risk-manager.yaml  strategy-designer.yaml
domains/research/agents/: competitive-analyst.yaml  deep-researcher.yaml  literature-reviewer.yaml
domains/study-notes/agents/: concept-explainer.yaml  flashcard-creator.yaml  note-synthesizer.yaml
domains/writing/agents/: brand-voice-specialist.yaml  content-writer.yaml  technical-writer.yaml
evagent-core/: Cargo.toml
evagent-core/src/: agent_registry.rs  config.rs  dispatcher.rs  errors.rs  intent_router.rs  lib.rs  main.rs  memory.rs  models.rs  permissions.rs  server.rs  session.rs  skill_loader.rs  tools_builtins.rs
evagent-core/tests/: integration_test.rs
evagent-opentui/: package.json  tsconfig.json
evagent-opentui/src/: entry.mjs  entry.ts  index.tsx  jsx-runtime.ts
evagent-tui/: Cargo.toml
evagent-tui/src/: app.rs  extract.rs  main.rs  types.rs  ui.rs  websocket.rs
evagent-tui/src/ui/: center.rs  header.rs  input.rs  left.rs  markdown.rs  mod.rs  right.rs
evagent-web/: index.html
glm-output/: README.md  config.yaml  evagent.bat
glm-output/domains/coding/: domain.yaml
glm-output/domains/communication/: domain.yaml
glm-output/domains/media/: domain.yaml
glm-output/domains/quant-trading/: domain.yaml
glm-output/domains/research/: domain.yaml
glm-output/domains/study-notes/: domain.yaml
glm-output/domains/writing/: domain.yaml
glm-output/evagent-core/: Cargo.toml
glm-output/evagent-core/src/: agent_registry.rs  config.rs  dispatcher.rs  errors.rs  intent_router.rs  llm_client.rs  main.rs  models.rs  permissions.rs  server.rs  session.rs  skill_loader.rs  tools.rs
glm-output/evagent-mock-server/: package.json  server.ts
glm-output/evagent-opentui/: entry.ts  package.json  tsconfig.json
glm-output/evagent-opentui/src/: index.tsx
glm-output/evagent-web/: index.html
glm-output/scripts/: gen_domains.py
glm-output/spec/: 07-memory.md
glm-output/upload/: 01-architecture.md  02-terminal-ui.md  06-tools.md  10-glm-prompt.md
scripts/: check_line_limits.py  ci.sh  coverage_gate.py  install-hooks.sh  security_audit.py  validate_agents.py  validate_skills.py
spec/: 03-web-gui.md  04-agent-delegation.md  05-skills.md  08-workflows.md  09-build.md
(+64 files in other folders)
