[package]
name = "evagent-core"
version = "0.1.0"
edition = "2021"
description = "EvAgent Multi-Domain AI Agent Orchestration Engine"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
parking_lot = "0.12"
rand = "0.8"
shellexpand = "3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dotenvy = "0.15"
