[package]
name = "evagent-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
color-eyre = "0.6"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
