[package]
name = "evagent-core"
version = "0.1.0"
edition = "2021"
description = "EvAgent multi-domain AI agent orchestration core engine"

[[bin]]
name = "evagent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"

# HTTP + WebSocket
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# HTTP client for LLM calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Concurrency primitives
parking_lot = "0.12"

# Regex for intent routing
regex = "1"

# Logging / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

# Misc
async-trait = "0.1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
walkdir = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
